--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         />
       </a>
 
-      <div class="toggle">
+      <div class="toggle" id="toggle">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
 
-      <div class="navbar-links">
+      <div class="navbar-links" id="navbar-links">
         <a href="#about_me">About</a>
         <a href="#my_skills">Skills</a>
         <a href="#form-container">Contact</a>
