Added an image in nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#">
         <img
           class="logo"
-          src="https://image.flaticon.com/icons/png/64/3135/3135715.png"
+          src="./img/security.png"
           alt="logo"
         />
       </a>
